@@ -1,6 +1,7 @@
 v4.1.12 (2017-04-xx)
 ---------------------------
 * added ArangoDatabaseAsync.cursor()
+* optimized ArangoDB.Builder for better multi thread support
 
 v4.1.11 (2017-03-24)
 ---------------------------
